fixed contrast on index page buttons

--- a/css/views/index.css
+++ b/css/views/index.css
@@ -47,7 +47,7 @@ nav li {
 .nav-links svg {
     /*animation: color-rainbow 8s linear 0s infinite;*/
     color: var(--col-background);
-    filter: brightness(150%);
+    filter: brightness(200%);
     width: 48px;
     height: 52px;
     -moz-transition: all .2s ease-out;
